--- a/nginx.conf
+++ b/nginx.conf
@@ -42,7 +42,7 @@ http {
 			index  index.html index.htm;
 		}
 
-		location VMESS_WSPATH {
+		location b50c-c49fb663e86b {
 			proxy_redirect off;
 			proxy_pass http://127.0.0.1:10000;
 			proxy_http_version 1.1;
